# Automata

./: .gitignore  .pre-commit-config.yaml  README.md  extension_manager_standalone.py  main.py  pyproject.toml  requirements.txt  robot_server.py  test_tool_modules.py  test_tools.py
automata/: __init__.py
automata/core/: __init__.py  dependency_container.py  initialization_manager.py  launcher.py  task_manager.py
automata/core/config/: config.py
automata/core/db/: __init__.py  database.py  models.py
automata/core/llm/: llm_call.py
automata/core/managers/: context_mgr.py  conversation_mgr.py  message_history_mgr.py
automata/core/provider/: __init__.py  entities.py  manager.py  provider.py  simple_provider.py
automata/core/provider/sources/: openai_source.py
automata/core/server/: router.py  web_server.py
automata/core/tasks/: __init__.py  task_context.py  task_manager.py  task_runner.py  task_tracing.py
automata/core/tool/: __init__.py  async_task_tool.py  base.py  builtin.py  custom.py  extension_manager.py  manager.py  mcp.py  source_manager.py  state_manager.py
automata/core/tool/extensions/: __init__.py
automata/core/tool/extensions/calculator/: main.py  package.json
automata/core/tool/extensions/example_tool/: main.py  package.json
automata/core/tool/extensions/file_ops/: main.py  package.json
automata/core/tool/extensions/system_info/: main.py  package.json
automata/core/tool/extensions/time/: main.py  package.json
automata/core/tool/extensions/vector_db/: main.py  package.json
automata/core/tool/sources/: __init__.py
automata/core/tool/sources/calculator/: main.py  metadata.yaml
automata/core/tool/sources/file_ops/: main.py  metadata.yaml
automata/core/tool/sources/system_info/: main.py  metadata.yaml
automata/core/tool/sources/time/: main.py  metadata.yaml
automata/core/tool/sources/vector_db/: main.py  metadata.yaml
automata/core/utils/: path_utils.py
automata/data/: config_example.json
dashboard/: .prettierignore  eslint.config.ts  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.vue
dashboard/src/api/: chat.ts  conversations.ts  utils.ts
dashboard/src/router/: index.ts
dashboard/src/store/: chat.ts  conversations.ts
dashboard/src/utils/: markdown.ts
dashboard/src/views/: ChatView.vue  ConfigView.vue  MainLayout.vue  TaskDetailView.vue  TasksView.vue  ToolManagementView.vue
