[project]
name = "automata"
version = "0.1.0"
description = "A Python-based AI personality system project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai-agents>=0.3.0",
    "pydantic>=2.10",
    "quart>=0.19.0",
    "sqlmodel>=0.0.16",
    "aiosqlite>=0.20.0",
    "sqlalchemy>=2.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["automata"]